# omni_cam

./: CMakeLists.txt  README.md  package.xml
include/omni_cam/: ocam.h
scripts/: matlab_to_cpp.py
src/: ocam.cpp
test/: ocam_param.txt  test_ocam.cpp
