<?xml version="1.0"?>
<package format="2">
  <name>omni_cam</name>
  <version>0.0.0</version>
  <description>Polynomial omnidirection camera model</description>
  <maintainer email="zzhang@ifi.uzh.ch">cforster</maintainer>
  <license>New BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>eigen_catkin</depend>
  <depend>eigen_checks</depend>
  <depend>glog_catkin</depend>

  <test_depend>gtest</test_depend>
</package>
